--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
     color: white;
 }
 
-.navbar a:active {
-    background-color: rgb(161, 217, 243);
+.navbar a.active {
+    background-color: rgb(17, 114, 224);
     color: white;
 }
 
@@ -254,4 +254,31 @@ body {
 
 .skill-col:nth-child(2) .skill-content .progress:nth-child(4) .bar span{
     width: 80%;
+}
+
+.projects {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding-bottom: 100px;
+    padding-top: 100px;
+}
+
+.contact {
+    padding-bottom: 100px;
+    padding-top: 100px;
+    background-color: rgb(51, 51, 59);
+}
+
+.contact-info {
+    font-size: 24px;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
 }
