--- a/style.css
+++ b/style.css
@@ -151,21 +151,26 @@ body {
     margin-top: 20px;
 }
 
-.edu-img img {
+.img-content {
+    height: 120px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-content img {
     max-width: 80%;
-    height: 50%;
+    height: 120px;
     object-fit: contain;
-    align-self: start;
-    margin-bottom: 20px;
+    align-self: center;
     z-index: -1;
 }
 
-.edu-text {
-    position: absolute;
-    top: 36px;
-    right: 10px;
+.img-content span {
     font-size: 30px;
     font-weight: bold;
+    padding-top: 40px;
+    padding-left: 40px;    
 }
 
 .skills {
@@ -257,13 +262,47 @@ body {
 }
 
 .projects {
+    padding-bottom: 100px;
+    padding-top: 100px;
+}
+
+.project-item {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
-    padding-bottom: 100px;
-    padding-top: 100px;
+}
+
+.project-item h3 {
+    margin-top: 20px;
+    font-size: 24px;
+    padding-bottom: 10px;
+    color: rgb(17, 114, 224);
+}
+
+.project-item p {
+    font-size: 20px;
+}
+
+.project-btn a {
+    width: 60px;
+    height: 100%;
+    margin: 20px 0 40px;
+    padding-left: 5px;
+    background-color: rgb(17, 114, 224);
+    border: 2px solid rgb(17, 114, 224);
+    border-radius: 4px;
+    display: inline-flex;
+    font-size: 20px;
+    font-weight: 600;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+}
+
+.project-btn a:hover {
+    background-color: white;
+    transition: .5s;
 }
 
 .contact {
